--- a/TestsSystem/TestsSystem.csproj
+++ b/TestsSystem/TestsSystem.csproj
@@ -63,6 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\RelayCommand.cs" />
     <Compile Include="Converters\heightConverter.cs" />
     <Compile Include="Models\History.cs">
       <DependentUpon>TestsModelAzure.tt</DependentUpon>
@@ -134,6 +135,7 @@
     <Compile Include="Models\Users.cs">
       <DependentUpon>TestsModelAzure.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\MainWIndowVM.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -257,5 +259,6 @@
       <LastGenOutput>TestsModelAzure.cs</LastGenOutput>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
