--- a/TestsSystem/App.config
+++ b/TestsSystem/App.config
@@ -7,7 +7,11 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <connectionStrings><add name="Tests_bdEntities" connectionString="metadata=res://*/Models.TestsModel.csdl|res://*/Models.TestsModel.ssdl|res://*/Models.TestsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2UJP81O;initial catalog=Tests_bd;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="Tests_bdEntities1" connectionString="metadata=res://*/Models.TestsModelAzure.csdl|res://*/Models.TestsModelAzure.ssdl|res://*/Models.TestsModelAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=interhin.database.windows.net;initial catalog=Tests_bd;integrated security=False;user id=interhin;password=Dimkalol2911;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="Tests_bdEntities" connectionString="metadata=res://*/Models.TestsModel.csdl|res://*/Models.TestsModel.ssdl|res://*/Models.TestsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2UJP81O;initial catalog=Tests_bd;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Tests_bdEntities1" connectionString="metadata=res://*/Models.TestsModelAzure.csdl|res://*/Models.TestsModelAzure.ssdl|res://*/Models.TestsModelAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=interhin.database.windows.net;initial catalog=Tests_bd;integrated security=False;user id=interhin;password=Dimkalol2911;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestsDBEntities" connectionString="metadata=res://*/Models.TestsModelAzure.csdl|res://*/Models.TestsModelAzure.ssdl|res://*/Models.TestsModelAzure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=interhin.database.windows.net;initial catalog=TestsDB;user id=interhin;password=Dimkalol2911;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
