--- a/TestsSystem/packages.config
+++ b/TestsSystem/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
 </packages>
